--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="fire_active_district">Active Fires In %1$s</string>
     <string name="risk_levels">Risk Levels</string>
     <string name="to_be_confirmed">To Be Confirmed</string>
+    <string name="info_not_available">Information Not Available</string>
 
 
 </resources>
