--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -19,4 +19,21 @@
     <string name="fire_active_district">Incêndios Ativos Em %1$s</string>
     <string name="to_be_confirmed">Por Confirmar</string>
     <string name="info_not_available">Informação Não Disponível</string>
+    <string name="name_form">Nome *</string>
+    <string name="name_hint_form">Nome e Apelido</string>
+    <string name="district_form">Distrito</string>
+    <string name="district_hint_form">Escolha Uma Opção</string>
+    <string name="date_form">Data e Hora *</string>
+    <string name="photo_form">Foto</string>
+    <string name="required_fields">* campos obrigatórios</string>
+    <string name="submit_button">Submeter</string>
+    <string name="details">Detalhes</string>
+    <string name="localization_details">Localização</string>
+    <string name="state_details">Estado</string>
+    <string name="operational_details">Meios Utilizados</string>
+    <string name="photos_details">Fotos</string>
+    <string name="observations_details">Observações</string>
+    <string name="name_cc_details">Reportado Por:</string>
+    <string name="name_details">"Nome: "</string>
+    <string name="cc_details">CC: %1$s</string>
 </resources>
