Bug fix -> strings.xml

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -21,7 +21,7 @@
     <string name="info_not_available">Informação Não Disponível</string>
     <string name="name_form">Nome *</string>
     <string name="name_hint_form">Nome e Apelido</string>
-    <string name="district_form">Distrito</string>
+    <string name="district_form">Distrito *</string>
     <string name="district_hint_form">Escolha Uma Opção</string>
     <string name="date_form">Data e Hora *</string>
     <string name="photo_form">Foto</string>
@@ -34,6 +34,6 @@
     <string name="photos_details">Fotos</string>
     <string name="observations_details">Observações</string>
     <string name="name_cc_details">Reportado Por:</string>
-    <string name="name_details">"Nome: "</string>
+    <string name="name_details">Nome:  %1$s</string>
     <string name="cc_details">CC: %1$s</string>
 </resources>
