--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -39,4 +39,5 @@
     <string name="error_empty_fill">Preenchimento Obrigatório</string>
     <string name="error_cc_fill">Tamanho Errado</string>
     <string name="submitted">Submetido Com Sucesso</string>
+    <string name="no_camera">Sem Permissões de Câmera</string>
 </resources>
