--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="error_cc_fill">Wrong Size</string>
     <string name="localization_list_details" translatable="false">%1$s, %2$s, %3$s</string>
     <string name="submitted">Submitted With Success</string>
+    <string name="no_camera">No Camera Permissions</string>
 
 
 </resources>
