Bug Fix, error when no internet on register, split error in risk when it comes empty

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -41,4 +41,5 @@
     <string name="no_camera">Sem Permissões de Câmera</string>
     <string name="nature_fire">Natureza</string>
     <string name="all">Todos os Distritos</string>
+    <string name="no_data">Sem Dados</string>
 </resources>
