--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="no_camera">No Camera Permissions</string>
     <string name="nature_fire">Nature</string>
     <string name="all">All Districts</string>
+    <string name="no_data">No Data</string>
 
 
 </resources>
